[gd_scene load_steps=9 format=3 uid="uid://btxy5mypwrlao"]

[ext_resource type="Script" path="res://Scenes/OSRoot/parts/OS/Apps/EmailApp/parts/email_component.gd" id="1_w0o0s"]
[ext_resource type="PackedScene" uid="uid://bifvm0qbufqhk" path="res://UI/VList/VList.tscn" id="2_ar35n"]
[ext_resource type="LabelSettings" uid="uid://gjdqvbphklm4" path="res://Fonts/settings/small_label.tres" id="3_21r5r"]
[ext_resource type="FontFile" uid="uid://cmbf3fsdcpk2b" path="res://Fonts/Ac437_IBM_Model3x_Alt2.ttf" id="4_hm80f"]
[ext_resource type="PackedScene" uid="uid://b2xiva1hpi0f4" path="res://Scenes/OSRoot/parts/OS/Apps/EmailApp/parts/EmailAttachment.tscn" id="5_mf5du"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b51d8"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yy1hf"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1
border_color = Color(0.314316, 0.314316, 0.314316, 0.796078)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tvy7c"]

[node name="EmailComponent" type="PanelContainer"]
offset_right = 500.0
offset_bottom = 400.0
script = ExtResource("1_w0o0s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_b51d8")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ScrollContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VList" parent="HBoxContainer/ScrollContainer2/PanelContainer/MarginContainer" instance=ExtResource("2_ar35n")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EmailContentContainer" type="PanelContainer" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ScrollContainer/EmailContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Subject:"
label_settings = ExtResource("3_21r5r")

[node name="SubjectLabel" type="Label" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Label"
label_settings = ExtResource("3_21r5r")

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "From:"
label_settings = ExtResource("3_21r5r")

[node name="FromLabel" type="Label" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Label"
label_settings = ExtResource("3_21r5r")

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Date:"
label_settings = ExtResource("3_21r5r")

[node name="DateLabel" type="Label" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Label"
label_settings = ExtResource("3_21r5r")

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer/HBoxContainer3/DateLabel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxFlat_yy1hf")

[node name="EmailContentRichText" type="RichTextLabel" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_hm80f")
bbcode_enabled = true
text = "Lorem ipsum odor amet, consectetuer adipiscing elit."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_tvy7c")

[node name="AttachmentContainer" parent="HBoxContainer/ScrollContainer/EmailContentContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_mf5du")]
layout_mode = 2
